omni/tests/goldens/types/undefined_ident_14.err
tests/goldens/types/undefined_ident_14.omni:1:20: error: undefined identifier "missing14"
  let result14:int = missing14
                     ^~~ hint: declare the name before using it
